app/styles/_sidebar.scss
@import "~bootstrap/scss/functions";
@import "~bootstrap/scss/mixins/breakpoints";
@import "variables";

.sidebar {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    z-index: 1031;

    display: flex;
    width: $sidebar-default-width;
    flex-direction: column;
    background: $sidebar-background;

    &__section {
        flex: 0 0 auto;
        padding: 1rem;

        &--fluid {
            flex: 1 1 auto;
            overflow-y: auto;
        }

        &--cover {
            padding: 0;
        }
    }

    &__close {
        display: none;

        > a {
            color: $gray-300;

            &:hover {
                color: $gray-500;
            }
        }
    }

    &__show-slim {
        display: none;
    }
}

// collapse to Slim Sidebar at >= LG
@media (min-width: breakpoint-min('lg', $grid-breakpoints)) {
    .sidebar--slim {
        &.sidebar--collapsed {
            width: $sidebar-slim-width;

            .sidebar__show-slim {
                display: block;
            }

            .sidebar__hide-slim {
                display: none;
            }

            .sidebar__section--fluid {
                overflow-y: visible;
            }
        }
    }
    .sidebar:not(.sidebar--slim) {
        &.sidebar--collapsed {
            display: none;
        }
    }
}

// overlay and collapse with transform at < LG
@media (max-width: breakpoint-max('md', $grid-breakpoints)) {
    .sidebar {
        position: fixed;
        top: 0;
        bottom: 0;
        left: 0;
        right: auto;
        
        transition: transform $sidebar-overlay-transition;

        &--collapsed {
            transform: translateX(-100%);
        }

        &--animations-disabled {
            transition: none;
        }

        &__close {
            position: absolute;
            top: 1rem;
            right: 1rem;
            display: block;
        }

        &:not(.sidebar--collapsed) {
            box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
        }
    }
}

